--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="TODO"
+                <a href="https://arxiv.org/pdf/2410.07441"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -74,7 +74,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="TODO"
+                <a href="https://arxiv.org/abs/2410.07441"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -297,15 +297,6 @@
       </div>
 
 
-
-
-
-<section class="section" id="BibTeX">
-  <div class="container is-max-desktop content">
-    <h2 class="title">BibTeX</h2>
-    <pre><code>TBD</code></pre>
-  </div>
-</section>
 
 
 <footer class="footer">
