--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
             <span class="author-block">University of Southern California</span>
           </div>
 
+          <div class="is-size-4 publication-subtitle">
+            <span class="subtitle-block">Preprint</span>
+          </div>
+
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
